--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "number",
     "numeric",
     "non-numeric",
-    "nan"
+    "nan",
+    "is",
+    "isnan",
+    "type",
+    "check"
   ],
   "bugs": {
     "url": "https://github.com/validate-io/nan/issues"
